[gd_scene load_steps=9 format=3 uid="uid://c6ve2hxhkmlix"]

[ext_resource type="PackedScene" uid="uid://3dolmuknvf1s" path="res://Scenes/flappy_bird.tscn" id="1_iloyg"]
[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="1_m1otu"]
[ext_resource type="PackedScene" uid="uid://bqflplh3shh68" path="res://Scenes/ground_manager.tscn" id="2_e4bov"]
[ext_resource type="PackedScene" uid="uid://b30d8nug4a56i" path="res://Scenes/background_manager.tscn" id="3_rjvyg"]
[ext_resource type="Script" path="res://Assets/Sprites/PipeManager.gd" id="4_bsf7e"]
[ext_resource type="PackedScene" uid="uid://cgb3ewo3yw6dj" path="res://Scenes/random_timer.tscn" id="5_10xvg"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_28jfq"]
distance = 30.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81miu"]
size = Vector2(797, 15)

[node name="Game" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(112, -61)
zoom = Vector2(1.5, 1.5)

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_m1otu")

[node name="GameOverTimer" type="Timer" parent="GameManager"]
wait_time = 2.0

[node name="BackgroundManager" parent="." instance=ExtResource("3_rjvyg")]
position = Vector2(-501, -182)
speed = 50.0

[node name="PipeManager" type="Node2D" parent="." node_paths=PackedStringArray("spawPos")]
position = Vector2(0, 1)
script = ExtResource("4_bsf7e")
spawPos = NodePath("../SpawPos")

[node name="RandomTimer" parent="PipeManager" instance=ExtResource("5_10xvg")]
min = 1.0
max = 2.0

[node name="GroundManager" parent="." instance=ExtResource("2_e4bov")]
position = Vector2(-473, 99)

[node name="FlappyBird" parent="." instance=ExtResource("1_iloyg")]
z_index = 2
position = Vector2(-82, -76)
rotation_speed = 4

[node name="SpawPos" type="Marker2D" parent="."]
position = Vector2(607, -117)

[node name="LimitLine" type="Area2D" parent="."]
position = Vector2(-717, -167)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimitLine"]
rotation = 1.57079
shape = SubResource("WorldBoundaryShape2D_28jfq")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, -331)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(88, 0)
shape = SubResource("RectangleShape2D_81miu")

[connection signal="timeout" from="GameManager/GameOverTimer" to="GameManager" method="_on_game_over_timer_timeout"]
[connection signal="timeout" from="PipeManager/RandomTimer" to="PipeManager" method="_on_random_timer_timeout"]
[connection signal="died" from="FlappyBird" to="GameManager" method="_on_flappy_bird_died"]
[connection signal="body_entered" from="LimitLine" to="BackgroundManager" method="_on_limit_line_body_entered"]
[connection signal="body_entered" from="LimitLine" to="PipeManager" method="_on_limit_line_body_entered"]
[connection signal="body_entered" from="LimitLine" to="GroundManager" method="_on_limit_line_body_entered"]
